# bote

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPS-PATTERN.md  Makefile  README.md  SECURITY.md  cyrius.cyml  cyrius.toml  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: dispatch.rs
docs/: benchmarks-rust-v-cyrius.md  cyrius-feedback.md  resolved-lang-issues.md  spec-compliance.md
docs/architecture/: overview.md
docs/audit/: 2026-04-14.md
docs/bugs/: cyrius-4.5.1-identifier-buffer-cap.md  cyrius-4.5.1-repro.cyr  cyrius-4.8.3-regressions.md  cyrius-4.8.4-ci-binary-skew.md
docs/development/: roadmap.md
docs/development/issues/: 2026-05-10-opt-in-transport-profile.md  2026-06-11-registry-new-collision.md  2026-06-23-err-io-enum-collision-namespace.md
docs/development/issues/archive/: 2026-06-23-err-io-enum-collision-namespace.md
docs/proposals/: cyrius-stdlib-base64url.md  cyrius-stdlib-http-server.md  cyrius-stdlib-ws-server.md  lib_http_server.cyr  lib_http_server_example.cyr  lib_ws_server.cyr  lib_ws_server_example.cyr
fuzz/: codec_parse.fcyr  codec_process.fcyr  jsonx_extract.fcyr  schema_validate.fcyr
lib/: libro_chain.cyr  libro_entry.cyr  libro_error.cyr  libro_export.cyr  libro_hasher.cyr  libro_merkle.cyr  libro_query.cyr  libro_retention.cyr  libro_verify.cyr  majra_counter.cyr  majra_envelope.cyr  majra_error.cyr  majra_namespace.cyr  majra_pubsub.cyr  majra_queue.cyr
rust-old/: Cargo.toml  codecov.yml
rust-old/benches/: dispatch.rs
rust-old/src/: audit.rs  auth.rs  bridge.rs  discovery.rs  dispatch.rs  events.rs  host.rs  lib.rs  libro_tools.rs  protocol.rs  sandbox.rs  schema.rs  session.rs
rust-old/src/tests/: mod.rs
rust-old/src/transport/: codec.rs  stdio.rs  streamable.rs  unix.rs
rust-old/tests/: conformance.rs
scripts/: bench-log.sh  build-all.sh  version-bump.sh
src/: _sandhi_compat.cyr  audit.cyr  audit.rs  audit_libro.cyr  auth.cyr  auth.rs  bridge.cyr  bridge.rs  codec.cyr  content.cyr  discovery.cyr  discovery.rs  dispatch.cyr  dispatch.rs  error.cyr  error.rs  events.cyr  events.rs  events_majra.cyr  fs_tools.cyr  host.cyr  host.rs  jsonx.cyr  jwt.cyr  lib.rs  libro_tools.cyr  libro_tools.rs  main.cyr  main_common.cyr  main_streamable.cyr  main_ws.cyr  pkce.cyr  prompts.cyr  protocol.cyr  protocol.rs  registry.cyr  registry.rs  resources.cyr  sandbox.cyr  sandbox.rs  (+12 more)
src/tests/: mod.rs
src/transport/: codec.rs  http.rs  middleware.rs  mod.rs  stdio.rs  streamable.rs  unix.rs  ws.rs
supply-chain/: audits.toml  config.toml
tests/: bote.bcyr  bote.tcyr  bote_auth.tcyr  bote_content.tcyr  bote_core_only_smoke.tcyr  bote_fs_tools.tcyr  bote_host.tcyr  bote_jwt.tcyr  bote_libro_tools.tcyr  bote_pkce.tcyr  bote_sandbox.tcyr  bote_streamable.tcyr  bote_web_tools.tcyr  bote_ws.tcyr  conformance.rs  cross_crate.rs  test.sh
