[package]
name = "bote"
version = "0.92.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "MCP core service — JSON-RPC 2.0 protocol, tool registry, audit integration, and TypeScript bridge"
documentation = "https://docs.rs/bote"
homepage = "https://github.com/MacCracken/bote"
repository = "https://github.com/MacCracken/bote"
readme = "README.md"
keywords = ["mcp", "json-rpc", "tools", "protocol", "agent"]
categories = ["web-programming"]
exclude = [".claude/", ".github/", "target/", "benches/history.log"]

[features]
default = []
auth = ["dep:sha2", "dep:base64", "dep:getrandom"]
host = ["dep:url"]
http = ["dep:axum", "dep:tokio", "dep:futures-util"]
ws = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util"]
unix = ["dep:tokio"]
all-transports = ["http", "ws", "unix"]
audit = ["dep:libro"]
events = ["dep:majra"]
bridge = ["http"]
discovery = ["events"]
sandbox = ["dep:kavach", "dep:tokio"]
full = ["all-transports", "audit", "events", "bridge", "discovery", "sandbox", "host", "auth"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

# Transport dependencies (all optional)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"], optional = true }
axum = { version = "0.8", optional = true }
tokio-tungstenite = { version = "0.29", optional = true }
futures-util = { version = "0.3", optional = true }

# Observability dependencies (all optional)
libro = { version = "0.91", optional = true }
majra = { version = "1.0", optional = true }

# Auth dependencies (optional)
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
getrandom = { version = "0.2", optional = true }

# URL validation (optional — for host SSRF checks)
url = { version = "2", optional = true }

# Sandbox (optional)
kavach = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "test-util"] }
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
libro = "0.91"
majra = "1.0"
kavach = { version = "1.0", default-features = false }
url = "2"
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.2"

[[bench]]
name = "dispatch"
harness = false
required-features = ["bridge"]
